--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
   , {typerefl, {git, "https://github.com/ieQu1/typerefl", {tag, "0.9.2"}}}
   , {lee, {git, "https://github.com/k32/lee", {tag, "0.2.0"}}}
   , {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "1.0.1"}}}
-  , {prometheus, "4.8.1"}
+  , {prometheus, {git, "https://github.com/deadtrickster/prometheus.erl", {tag, "v4.8.2"}}}
   , {prometheus_push, {git, "https://github.com/deadtrickster/prometheus-push", {branch, "master"}}} %% TODO
   , {cowboy,     "2.9.0"}
   , {jsone,      "1.7.0"}
