--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
   , {lee, {git, "https://github.com/k32/lee", {tag, "0.2.0"}}}
   , {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "1.0.1"}}}
   , {prometheus, {git, "https://github.com/deadtrickster/prometheus.erl", {tag, "v4.8.2"}}}
-  , {prometheus_push, {git, "https://github.com/deadtrickster/prometheus-push", {branch, "master"}}} %% TODO
+  , hackney
   , {cowboy,     "2.9.0"}
   , {jsone,      "1.7.0"}
   ]}.
