--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 
 {deps,
   [ {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.4.4"}}}
-  , {lee, {git, "https://github.com/k32/lee", {tag, "0.2.0"}}}
+  , {lee, {git, "https://github.com/k32/lee", {branch, "naster"}}}
   , {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "1.0.1"}}}
   , {prometheus, {git, "https://github.com/deadtrickster/prometheus.erl", {tag, "v4.8.2"}}}
   , hackney
@@ -22,6 +22,9 @@
  [ {prod,
     [ {relx, [{mode, prod}]}
     ]}
+ , {test,
+    [{deps, [ {proper, "1.3.0"}
+            ]}]}
  ]}.
 
 {escript_include_apps, [kernel, emqttb]}.
