Implement terminate callback

--- a/rebar.config
+++ b/rebar.config
@@ -28,5 +28,25 @@
  ]}.
 
 {escript_include_apps, [kernel, emqttb]}.
+{escript_emu_args, "%%! -smp true +K true +A 16 +P 16000000 +Muacnl 0 +hms 64 -env ERL_MAX_PORTS 16000000 -env ERTS_MAX_PORTS 16000000\n"}.
+{escript_shebang, "#!/usr/bin/env escript\n"}.
+{provider_hooks, [{post, [{compile, escriptize}]}]}.
+{post_hooks, [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)",
+               escriptize,
+               "bash -c '                                                                           "
+               "     for nifso in ${REBAR_DEPS_DIR}/quicer/priv/libquicer_nif.so                    "
+               "                  ${REBAR_CHECKOUTS_OUT_DIR}/quicer/priv/libquicer_nif.so;          "
+               "     do [ -f $nifso ] && cp $nifso ${REBAR_BUILD_DIR}/bin/;                         "
+               "     done;                                                                          "
+               "     rm ./emqttb ./libquicer_nif.so;                                           "
+               "     ln -s \"${REBAR_BUILD_DIR}/bin/emqttb\" ./emqttb;                    "
+               "     ln -s \"${REBAR_BUILD_DIR}/bin/libquicer_nif.so\" ./libquicer_nif.so;          "
+               "     '                                                                              "
+              },
+              {"win32",
+               escriptize,
+               "robocopy \"%REBAR_BUILD_DIR%/bin/\" ./ emqttb* "
+               "/njs /njh /nfl /ndl & exit /b 0"} % silence things
+             ]}.
 
 {ct_readable, false}.
