--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,6 @@
 {relx,
   [ {release, {emqttb, "0.1.0"}, [emqttb, kernel]}
   , {mode, dev}
-  , {sys_config_src, "./config/sys.config.src"}
   , {vm_args_src, "./config/vm.args.src"}
   ]}.
 
@@ -38,10 +37,14 @@
                "                  ${REBAR_CHECKOUTS_OUT_DIR}/quicer/priv/libquicer_nif.so;          "
                "     do [ -f $nifso ] && cp $nifso ${REBAR_BUILD_DIR}/bin/;                         "
                "     done;                                                                          "
-               "     rm ./emqttb ./libquicer_nif.so;                                           "
-               "     ln -s \"${REBAR_BUILD_DIR}/bin/emqttb\" ./emqttb;                    "
+               "     rm ./emqttb ./libquicer_nif.so;                                                "
+               "     ln -s \"${REBAR_BUILD_DIR}/bin/emqttb\" ./emqttb;                              "
                "     ln -s \"${REBAR_BUILD_DIR}/bin/libquicer_nif.so\" ./libquicer_nif.so;          "
                "     '                                                                              "
+              },
+              {"(linux|darwin|solaris|freebsd|netbsd|openbsd)",
+               tar,
+               "scripts/rename-package.sh"
               },
               {"win32",
                escriptize,
