--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ on:
         default: false
 
 jobs:
-  package:
+  linux:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -97,7 +97,9 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: package
+    needs:
+      - linux
+      - mac
     if: startsWith(github.ref, 'refs/tags/') && !inputs.dryrun
 
     steps:
