--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,9 @@ jobs:
     strategy:
       matrix:
         otp:
-          - 24
+          - "24.3.4.2-1"
     container:
-      image: erlang:${{ matrix.otp }}
+      image: ghcr.io/emqx/emqx-builder/5.0-27:1.13.4-${{ matrix.otp }}-debian11
 
     steps:
     - uses: actions/checkout@v3
