feat(release): Include ERTS in the release

--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,7 @@
   [ {release, {emqttb, "0.1.0"}, [emqttb, kernel]}
   , {mode, dev}
   , {vm_args_src, "./config/vm.args.src"}
+  , {include_erts, true}
   ]}.
 
 {profiles,
