--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 
 {deps,
   [ {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.8.2"}}}
-  , {lee, {git, "https://github.com/k32/lee", {branch, "master"}}}
+  , {lee, {git, "https://github.com/k32/lee", {tag, "0.3.0"}}}
   , {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "1.0.1"}}}
   , {prometheus, {git, "https://github.com/deadtrickster/prometheus.erl", {tag, "v4.8.2"}}}
   , hackney
