--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 %% -*- mode: erlang -*-
 {erl_opts, [debug_info]}.
+{validate_app_modules, true}.
 
 {deps,
   [ {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.8.2"}}}
@@ -11,22 +12,14 @@
   , {jsone,      "1.7.0"}
   ]}.
 
-{relx,
-  [ {release, {emqttb, "0.1.0"}, [emqttb, kernel]}
-  , {mode, dev}
-  , {vm_args_src, "./config/vm.args.src"}
-  , {include_erts, true}
-  ]}.
-
 {profiles,
- [ {prod,
-    [ {relx, [{mode, prod}]}
-    ]}
- , {test,
+ [{test,
     [{deps, [ {proper, "1.3.0"}
             ]}]}
  ]}.
 
+{escript_name, emqttb}.
+{escript_main_app, emqttb}.
 {escript_include_apps, [kernel, emqttb]}.
 {escript_emu_args, "%%! -smp true +K true +A 16 +P 16000000 +Muacnl 0 +hms 64 -env ERL_MAX_PORTS 16000000 -env ERTS_MAX_PORTS 16000000\n"}.
 {escript_shebang, "#!/usr/bin/env escript\n"}.
@@ -42,10 +35,6 @@
                "     ln -s \"${REBAR_BUILD_DIR}/bin/emqttb\" ./emqttb;                              "
                "     ln -s \"${REBAR_BUILD_DIR}/bin/libquicer_nif.so\" ./libquicer_nif.so;          "
                "     '                                                                              "
-              },
-              {"(linux|darwin|solaris|freebsd|netbsd|openbsd)",
-               tar,
-               "scripts/rename-package.sh"
               },
               {"win32",
                escriptize,
