--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,17 @@ jobs:
     strategy:
       matrix:
         otp:
-          - "24.3.4.2-1"
+          - "24.3.4.2-3"
     container:
-      image: ghcr.io/emqx/emqx-builder/5.0-27:1.13.4-${{ matrix.otp }}-debian11
+      image: ghcr.io/emqx/emqx-builder/5.0-34:1.13.4-${{ matrix.otp }}-debian11
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Compile and run tests
       env:
         BUILD_WITHOUT_QUIC: "true"
-      run: make
+      run: |
+        git config --global --add safe.directory $(pwd)
+        make
