--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - "*"
   workflow_dispatch:
     inputs:
-      tag:
+      ref:
         type: string
         required: true
       dryrun:
@@ -21,7 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         otp:
-          - "24.3.4.2-3"
+          - "25.1.2-3"
         quic_support:
           - false
         os:
@@ -42,6 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: ${{ github.event.inputs.ref }}
           fetch-depth: 0
       - shell: bash
         run: |
@@ -64,36 +65,24 @@ jobs:
         macos:
           - macos-12
         otp:
-          - "24"
+          - "25"
 
     runs-on: ${{ matrix.macos }}
 
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: ${{ github.event.inputs.ref }}
           fetch-depth: 0
       - name: prepare
         run: |
-          brew install coreutils
-          echo "/usr/local/bin" >> $GITHUB_PATH
-          git config --global credential.helper store
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: ~/.kerl
-          key: otp-${{ matrix.otp }}-${{ matrix.macos }}
-      - name: build erlang
-        if: steps.cache.outputs.cache-hit != 'true'
-        timeout-minutes: 60
-        run: |
-          kerl build git https://github.com/emqx/otp.git OTP-${{ matrix.otp }} ${{ matrix.otp }}
-          kerl install ${{ matrix.otp }} $HOME/.kerl/${{ matrix.otp }}
+          brew install coreutils erlang@${{ matrix.otp }}
+          brew link --force erlang@${{ matrix.otp }}
       - name: build
         shell: bash
         env:
           BUILD_WITHOUT_QUIC: 1
         run: |
-          . $HOME/.kerl/${{ matrix.otp }}/activate
           make release
       - if: failure()
         run: cat rebar3.crashdump
