--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
 {escript_name, emqttb}.
 {escript_main_app, emqttb}.
 {escript_include_apps, [kernel, emqttb]}.
-{escript_emu_args, "%%! -smp true +K true +A 16 +P 16000000 +Muacnl 0 +hms 64 -env ERL_MAX_PORTS 16000000 -env ERTS_MAX_PORTS 16000000\n"}.
+{escript_emu_args, "%%! -smp true +K true +a16 +P16000000 +Q134217727 +Muacnl 0 +hms 64 -env ERL_MAX_PORTS 16000000 -env ERTS_MAX_PORTS 16000000\n"}.
 {escript_shebang, "#!/usr/bin/env escript\n"}.
 {provider_hooks, [{post, [{compile, escriptize}]}]}.
 {post_hooks, [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)",
