ci: Add additional packages for building documenation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,10 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - name: Install additional packages
+      run: |
+        apt-get update
+        apt-get install -y openjdk-11-jdk asciidoctor libxml2-utils
     - name: Compile and run tests
       env:
         BUILD_WITHOUT_QUIC: "true"
