docs: remove @make-docs action, use a separate escript instead

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
     - name: Install additional packages
       run: |
         apt-get update
-        apt-get install -y openjdk-11-jdk asciidoctor libxml2-utils
+        apt-get install -y openjdk-11-jdk asciidoctor xsltproc docbook-xsl
     - name: Compile and run tests
       env:
         BUILD_WITHOUT_QUIC: "true"
       run: |
         git config --global --add safe.directory $(pwd)
-        make
+        make all docs
