doc: Show manpage when ran without arguments

--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,7 @@
                "     do [ -f $nifso ] && cp $nifso ${REBAR_BUILD_DIR}/bin/;                         "
                "     done;                                                                          "
                "     rm ./emqttb ./libquicer_nif.so;                                                "
-               "     ln -s \"${REBAR_BUILD_DIR}/bin/emqttb\" ./emqttb;                              "
+               "     ln -s \"${REBAR_BUILD_DIR}/rel/emqttb/bin/emqttb\" ./emqttb;                   "
                "     ln -s \"${REBAR_BUILD_DIR}/bin/libquicer_nif.so\" ./libquicer_nif.so;          "
                "     '                                                                              "
               },
