ci: Add syntax highlighting in the documentation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         name: Install additional packages
         run: |
           apt-get update
-          apt-get install -y openjdk-11-jdk asciidoctor xsltproc docbook-xsl
+          apt-get install -y openjdk-11-jdk asciidoctor xsltproc docbook-xsl python3-pygments
 
       - shell: bash
         run: |
