--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ on:
         default: false
 
 jobs:
+  # Build documentation once, since it requires a lot of 3rd party
+  # tooling, then reuse it as an artifact:
   docs:
     runs-on: ubuntu-latest
 
@@ -33,7 +35,8 @@ jobs:
           apt-get update
           apt-get install -y openjdk-11-jdk asciidoctor xsltproc docbook-xsl python3-pygments
 
-      - shell: bash
+      - name: Build
+        shell: bash
         run: |
           export BUILD_WITHOUT_QUIC=1
           git config --global --add safe.directory $(pwd)
@@ -45,6 +48,7 @@ jobs:
           name: docs
           path: docs.tar.gz
 
+  # Do normal builds:
   linux:
     runs-on: ubuntu-latest
     needs: docs
@@ -53,8 +57,6 @@ jobs:
       matrix:
         otp:
           - "25.1.2-3"
-        quic_support:
-          - false
         os:
           - ubuntu22.04
           - ubuntu20.04
@@ -81,9 +83,9 @@ jobs:
           name: docs
           path: .
 
-      - shell: bash
+      - name: Build
+        shell: bash
         run: |
-          [ "false" == ${{ matrix.quic_support }} ] && export BUILD_WITHOUT_QUIC=1
           git config --global --add safe.directory $(pwd)
           tar xf docs.tar.gz
           export CAN_BUILD_DOCS=false
@@ -126,8 +128,6 @@ jobs:
 
       - name: build
         shell: bash
-        env:
-          BUILD_WITHOUT_QUIC: 1
         run: |
           tar xf docs.tar.gz
           export CAN_BUILD_DOCS=false
