--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,10 @@ jobs:
       matrix:
         otp:
           - "25.1.2-3"
+        os:
+          - ubuntu20.04
     container:
-      image: ghcr.io/emqx/emqx-builder/5.0-34:1.13.4-${{ matrix.otp }}-debian11
+      image: ghcr.io/emqx/emqx-builder/5.0-34:1.13.4-${{ matrix.otp }}-${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v3
@@ -29,3 +31,14 @@ jobs:
       run: |
         git config --global --add safe.directory $(pwd)
         make all docs
+    - name: Create release package
+      shell: bash
+      run: |
+        make release
+    - if: failure()
+      run: cat rebar3.crashdump
+    - run: ./_build/default/bin/emqttb
+    - uses: actions/upload-artifact@v3
+      with:
+        name: packages
+        path: ./*.tar.gz
