feat: Start erlang distribution for remote debugging

--- a/rebar.config
+++ b/rebar.config
@@ -11,11 +11,13 @@
   , hackney
   , {cowboy,     "2.9.0"}
   , {jsone,      "1.7.0"}
+
+  , {system_monitor, {git, "https://github.com/ieQu1/system_monitor.git", {tag, "3.0.3"}}}
   ]}.
 
 {escript_name, emqttb}.
 {escript_main_app, emqttb}.
-{escript_include_apps, [kernel, emqttb]}.
+{escript_include_apps, [kernel, emqttb, system_monitor]}.
 {escript_emu_args, "%%! -smp true +K true +a16 +P16000000 +Q134217727 +Muacnl 0 +hms 64 -env ERL_MAX_PORTS 16000000 -env ERTS_MAX_PORTS 16000000\n"}.
 {escript_shebang, "#!/usr/bin/env escript\n"}.
 {provider_hooks, [{post, [{compile, escriptize}]}]}.
