--- a/rebar.config
+++ b/rebar.config
@@ -37,3 +37,7 @@
              ]}.
 
 {ct_readable, false}.
+
+{xref_checks,[undefined_function_calls,undefined_functions,locals_not_used,
+              deprecated_function_calls,
+              deprecated_functions]}.
