feat(grafana): Add spans for each run

--- a/rebar.config
+++ b/rebar.config
@@ -44,3 +44,9 @@
 {xref_checks,[undefined_function_calls,undefined_functions,locals_not_used,
               deprecated_function_calls,
               deprecated_functions]}.
+
+{dialyzer, [
+    {plt_apps, all_apps},
+    {extra_plt_apps, [lee, typerefl, ssl, stdlib]},
+    {statistics, true}
+]}.
