--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,14 @@ jobs:
     strategy:
       matrix:
         otp:
-          - "25.1.2-3"
+          - "26.2.3-1"
         os:
-          - ubuntu20.04
+          - ubuntu24.04
     container:
-      image: ghcr.io/emqx/emqx-builder/5.0-34:1.13.4-${{ matrix.otp }}-${{ matrix.os }}
+      image: ghcr.io/emqx/emqx-builder/5.3-6:1.15.7-${{ matrix.otp }}-${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       with:
         fetch-depth: 0
     - name: Install additional packages
@@ -38,7 +38,7 @@ jobs:
     - if: failure()
       run: cat rebar3.crashdump
     - run: ./_build/default/bin/emqttb
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
       with:
         name: packages
         path: ./*.tar.gz
