--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,8 +70,8 @@ jobs:
           - el7
           - amzn2
           - amzn2023
-    container:
-      image: ghcr.io/emqx/emqx-builder/5.3-6:1.15.7-${{ matrix.otp }}-${{ matrix.os }}
+    env:
+      EMQX_BUILDER: ghcr.io/emqx/emqx-builder/5.3-6:1.15.7-${{ matrix.otp }}-${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
@@ -87,13 +87,10 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          git config --global --add safe.directory $(pwd)
           tar xf docs.tar.gz
-          export CAN_BUILD_DOCS=false
-          make release
+          docker run -t --rm -v $(pwd):/emqttb -w /emqttb -e CAN_BUILD_DOCS=false -e REBAR=/usr/local/bin/rebar3 $EMQX_BUILDER bash -c 'git config --global --add safe.directory /emqttb && make release && timeout -s 9 5s ./emqttb @pub -t t/%n'
       - if: failure()
         run: cat rebar3.crashdump
-      - run: ./_build/default/bin/emqttb
       - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
         if: startsWith(github.ref, 'refs/tags/')
         with:
