--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 {validate_app_modules, true}.
 
 {deps,
-  [ {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.13.5"}}}
+  [ {emqtt, {git, "https://github.com/emqx/emqtt", {tag, "1.14.4"}}}
   , {gproc, "0.9.1"}
   , {lee, {git, "https://github.com/k32/lee", {tag, "0.5.1"}}}
   , {snabbkaffe, {git, "https://github.com/kafka4beam/snabbkaffe", {tag, "1.0.10"}}}
@@ -12,13 +12,13 @@
   , {cowboy,     "2.9.0"}
   , {jsone,      "1.7.0"}
 
-  , {system_monitor, {git, "https://github.com/ieQu1/system_monitor.git", {tag, "3.0.3"}}}
+  , {system_monitor, {git, "https://github.com/ieQu1/system_monitor.git", {tag, "3.0.6"}}}
   ]}.
 
 {escript_name, emqttb}.
 {escript_main_app, emqttb}.
 {escript_include_apps, [kernel, emqttb, system_monitor]}.
-{escript_emu_args, "%%! -smp true +K true +a16 +P16000000 +Q134217727 +Muacnl 0 +hms 64 -env ERL_MAX_PORTS 16000000 -env ERTS_MAX_PORTS 16000000\n"}.
+{escript_emu_args, "%%! -smp true +K true +a16 +P16000000 +Q134217727 +Muacnl 0 +hms 64 -env ERL_MAX_PORTS 16000000 -env ERTS_MAX_PORTS 16000000 +h 50\n"}.
 {escript_shebang, "#!/usr/bin/env escript\n"}.
 {provider_hooks, [{post, [{compile, escriptize}]}]}.
 {post_hooks, [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)",
